# inversionsCount

./: LICENSE  README.md  data  inversions.hs  inversionsCount.cabal  stack.yaml
