name:                inversionsCount
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/guibou/inversionsCount#readme
license:             BSD3
license-file:        LICENSE
author:              Guillaume Bouchard
maintainer:          guillaum.bouchard@gmail.com
copyright:           2016 Guillaume Bouchard
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable inversionsCount
  hs-source-dirs:      .
  main-is:             inversions.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,attoparsec
                      ,bytestring
                      ,vector
                      ,protolude
  ghc-options: -Wall -O2
